k8s/Deployment.yaml
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-deployment

  template:
    metadata:
      labels:
        app: api-deployment
    spec:
      containers:
        - name: api-container
          image: simple-api:latest
          imagePullPolicy: IfNotPresent
          command: [ "gunicorn" ]
          args: [
              "api:app",
              "--bind=0.0.0.0:8080",
              "--workers=1",
              "--chdir=/app",
              "--worker-class=uvicorn.workers.UvicornWorker",
              "--log-level=INFO"
          ]

          ports:
            - protocol: TCP
              containerPort: 8080
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi

---
